cmake_minimum_required(VERSION 2.8)

project( tpf-rt )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fvisibility=hidden")
set(CMAKE_BINARY_DIR ${MAIN_LIB_DIR})

file(GLOB TPF_LIBRARY_SOURCE_FILES ${TPF_LIBRARY_SOURCES}/*.cpp
    ${TPF_LIBRARY_SOURCES}/tasks/*.cpp
    ${TPF_LIBRARY_SOURCES}/task_queues/*.cpp)

add_library(${PROJECT_NAME} SHARED ${TPF_LIBRARY_SOURCE_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

install(TARGETS ${PROJECT_NAME} DESTINATION ${RESULT_DIRECTORY}/bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)